# A2A

./: .cspell.json  .gitignore  .gitvote  .lycheecache  .pre-push-review-not-required  A2A_Standard_Agent_Card_Generator.ipynb  A2A_Standard_Agent_Card_Generator_FIXED.ipynb  A2A_Standard_Agent_Card_Generator_original.ipynb  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  MCP_Server_Generator.ipynb  MCP_Server_Validator_V_1,1.ipynb  README.md  RELEASES.md  aritfex_apart_defense_CC.ipynb  index.html  llms-full.txt  lychee.toml  mkdocs.yml  robots.txt  versions.json
.github/: CODEOWNERS
.jules/: bolt.md
.mkdocs/: macros.py
a2a-mesh/: pyproject.toml
a2a-mesh/configs/: master.yaml  slave-claude-code.yaml  slave-coder.yaml  slave-researcher.yaml  slave-reviewer.yaml
a2a-mesh/mesh/: __init__.py  cli.py  server.py
a2a-mesh/mesh/agent/: __init__.py  base.py  config.py  executor.py  tools.py
a2a-mesh/mesh/fileshare/: __init__.py  client.py  server.py
a2a-mesh/mesh/integrations/: __init__.py  aider.py  claude_code.py  generic_cli.py
a2a-mesh/mesh/network/: __init__.py  discovery.py  models.py  registry.py  topology.py
a2a-mesh/mesh/orchestrator/: __init__.py  autonomy.py  intent.py  master.py  router.py
a2a-mesh/mesh/ui/: __init__.py  api.py  ws.py
adrs/: adr-001-protojson-serialization.md  adr-002-queryskill.md  adr-template.md
cli/: .golangci.yml  Makefile  README.md  go.mod  go.sum
cross-extension/: arkforge_verdict_specimen.json  nobulex_receipt_specimen.json
dev/: 404.html  index.html  llms-full.txt  sitemap.xml
docs/: community.md  (+15 more)
(+1383 files in other folders)
